media/css/m24/components/navigation-refresh.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.

@use '../vars/lib' as *;

$margin-top: 54px; // top margin offset for mobile navigation menu

@keyframes nav-slide-in {
    from {
        transform: translateX(100%);
    }

    to {
        transform: translateX(0);
    }
}

@keyframes nav-slide-in-reverse {
    from {
        transform: translateX(-100%);
    }

    to {
        transform: translateX(0);
    }
}

.m24-navigation-refresh {
    background-color: $color-white;
    border-bottom: $border-width solid $m24-color-light-mid-gray;
    display: flex;
    width: 100%;

    @media #{$mq-md} {
        display: block;
    }
}

// * -------------------------------------------------------------------------- */
// Sticky navigation styles
@supports (position: sticky) {
    html.mzp-has-sticky-navigation {
        .m24-navigation-refresh.m24-mzp-is-sticky {
            position: sticky;
            z-index: 1000;
            left: 0;
            top: 0;
            @include transition(transform 300ms ease-in-out, box-shadow 300ms ease-in-out);

            &.mzp-is-scrolling {
                // Shadow colors are equivalent to $color-ink-90, $color-blue-90, $color-ink-90
                // We can't use a $box-shadow token here because it needs a different size and offset
                box-shadow: 0 0 6px 1px rgba(29, 17, 51, 0.04), 0 0 8px $border-width rgba(9, 32, 77, 0.12), 0 0 5px -3px rgba(29, 17, 51, 0.12);
            }

            &.mzp-is-hidden {
                @include transform(translate(0, -110%));
            }

            @media (prefers-reduced-motion: reduce) {
                position: static;
            }
        }
    }
}

// Common navigation styles
.m24-c-navigation-l-content {
    display: flex;
    padding: $spacer-xs $spacer-md;
    position: relative;
    width: 100%;

    @media #{$mq-md} {
        display: block;
        padding: $spacer-sm 0 0;
        width: auto;
    }
}

.m24-c-navigation-container {
    margin: 0 auto;
    max-width: $content-max;
    padding: 0;
    position: relative;
    width: 100%;

    @media #{$mq-md} {
        align-items: start;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        position: static;
        padding: 0 $container-padding;
        box-sizing: border-box;
    }
}

// Mobile navigation menu button.
.m24-c-navigation-menu-button {
    display: none;
}

.js .m24-c-navigation-menu-button {
    background-color: transparent;
    border: none;
    color: $color-black;
    display: block;
    float: right;
    font-weight: 600;
    height: 32px;
    margin: 4px 0 0;
    padding: 0;
    position: relative;
    text-decoration: underline;
    text-underline-offset: 2px;
    text-decoration-thickness: 1px;

    &.mzp-is-active {
        background: transparent url('/media/protocol/img/icons/close.svg') center center no-repeat;
        width: 40px;
        @include image-replaced;

        &::after {
            content: none;
        }
    }

    @media #{$mq-md} {
        display: none;
        margin: 24px 0;
    }
}

[dir='rtl'].js .m24-c-navigation-menu-button {
    float: left;
}

.m24-c-navigation-logo-link {
    display: inline-block;
}

.m24-c-navigation-logo-image {
    height: 27px;
    width: auto;
    padding-top: $spacing-xs;

    @media #{$mq-md} {
        height: 24px;
        padding: 0;
    }
}

.spacer-gif {
    display: inline-block;
    width: 100px;
}

// Mobile navigation menu with JS enabled.
.js .m24-c-navigation-items {
    display: none;

    @media (max-width: $screen-md) {
        &.mzp-is-open {
            display: flex;
            height: calc(100vh - $margin-top);
            margin-top: $margin-top;
            overflow: hidden auto;
            padding-top: 0;
            position: fixed;
            right: 0;
            top: 0;
            width: 100%;
            z-index: 100;
            @include bidi(((animation, nav-slide-in 0.45s ease, nav-slide-in-reverse 0.45s ease),));

            @media (prefers-reduced-motion: reduce) {
                @include bidi(((animation, none, none),));
            }

            .m24-c-menu-category-list:has(.m24-c-menu-category.mzp-is-selected) {
                margin-bottom: 0;

                .m24-c-menu-category:not(.mzp-is-selected) {
                    display: none;
                }
            }
        }
    }

    @media #{$mq-md} {
        display: block;
    }
}

.m24-c-navigation-menu {
    margin-bottom: 0;
    width: 100%;

    @media #{$mq-md} {
        border-top: transparent;
        width: auto;
    }
}

// Basic hover interactions with JavaScript disabled or not supported.
.m24-c-menu.m24-mzp-is-basic .m24-c-menu-category {
    @media #{$mq-md} {
        &.mzp-has-drop-down:hover,
        &.mzp-has-drop-down:focus {
            .m24-c-menu-panel {
                display: block;
            }
        }

        &.mzp-has-drop-down:focus-within {
            .m24-c-menu-panel {
                display: block;
            }
        }
    }
}
/* ... */

